Fixed font issues, spacing issues, and cleaned up general html. We need to deal with the slow loading problem due to tons of photos...

--- a/css/custom.css
+++ b/css/custom.css
@@ -878,6 +878,7 @@ code {
 	font-family:"Helvetica Neue";
 	font-weight: 200;
 	text-align: center;
+	margin-bottom: 50px;
 }
 
 
@@ -903,10 +904,12 @@ code {
 	z-index:1;
 }
 
-.memberPic:hover {
+/*THIS SEEMS TO ACTUALLY DO BLURRING!!!*/
+
+/*.memberPic:hover {
 	-webkit-filter: blur(5px);
 	filter: blur (5px);
-}
+}*/
 
 .leadPic {
     /* linear-gradient(to top, #D8D8D8, #C32828); */
@@ -942,11 +945,11 @@ code {
 
 .memberName {
     position: absolute;
-    top: 0;
+    top: 50px;
     color:white;
     width: 190px;
     height: 190px;
-    line-height:190px;
+    /*line-height:190px;*/
     text-align: center;
     z-index: 10;
     opacity: 0;
@@ -967,22 +970,7 @@ code {
 }
 
 .memberTitle {
-    position: absolute;
-    top: 0;
-    color:white;
-    width: 190px;
-    height: 190px; 
-    line-height:235px;
-   text-align: center;
-    z-index: 8;
-    opacity: 0;
-    font-family: "Helvetica Neue";
-    font-size: 1em;
-    -webkit-transition: all 0.3s ease;
-    -moz-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-    font-size: 0.8em;
+    font-size:0.7em;
 }
 
 .memberTitle:hover {
